--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -38,5 +38,6 @@ jobs:
 
     - name: Upload results to security tab
       uses: github/codeql-action/upload-sarif@v2
+      if: always()
       with:
         sarif_file: reports/ps-rule-results.sarif
