updated branch ci filter

--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -2,7 +2,8 @@ name: 'PSRule scan for Bicep'
 on:
   push:
     branches:
-    - '*'
+    - 'main'
+    - 'feature/*'
   workflow_dispatch:
 
 # Comment
