--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -22,7 +22,7 @@ jobs:
       uses: microsoft/ps-rule@main
       with:
         inputType: 'inputPath'                                        # Optional. Determines the type of input to use for PSRule. 'repository or 'inputPath'
-        inputPath: 'infrastructure/bicep'                                            # Optional. The path PSRule will look for files to validate.
+        inputPath: '/infrastructure/bicep'                                            # Optional. The path PSRule will look for files to validate.
         modules: 'PSRule.Rules.Azure'                                              # Optional. A comma separated list of modules to use for analysis.
         #source: string                                               # Optional. A path containing rules to use for analysis.
         baseline: 'Azure.GA_2024_03'                                             # Optional. The name of a PSRule baseline to use.
@@ -33,9 +33,7 @@ jobs:
         outputPath: './'                                             # Optional. The file path to write results to.
         path: './'                                                   # Optional. The working directory PSRule is run from.
         prerelease: false                                          # Optional. Determine if a pre-release module version is installed.
-        #repository: string                                           # Optional. The name of the PowerShell repository where PSRule modules are installed from.
         summary: true                                             # Optional. Determines if a job summary is written.
-        #version: string                                              # Optional. The specific version of PSRule to use.
 
     - name: Upload results to security tab
       uses: github/codeql-action/upload-sarif@v2
