--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -39,4 +39,4 @@ jobs:
       uses: github/codeql-action/upload-sarif@v2
       if: always()
       with:
-        sarif_file: reports/ps-rule-results.sarif
+        sarif_file: './reports/ps-rule-results.sarif'
