--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -35,6 +35,9 @@ jobs:
         prerelease: false                                          # Optional. Determine if a pre-release module version is installed.
         summary: true                                             # Optional. Determines if a job summary is written.
 
+    - run: |
+        ls -al ./
+      
     - name: Upload results to security tab
       uses: github/codeql-action/upload-sarif@v2
       if: always()
