--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -37,6 +37,7 @@ jobs:
 
     - run: |
         ls -al ./
+      if: always()
       
     - name: Upload results to security tab
       uses: github/codeql-action/upload-sarif@v2
