trying again to get sarif output

--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -30,7 +30,7 @@ jobs:
         #option: string                                               # Optional. The path to an options file.
         outcome: Fail, Pass, Error, Processed, Problem, All          # Optional. Filters output to include results with the specified outcome.
         outputFormat: Sarif                                          # Optional. The format to use when writing results to disk.
-        outputPath: './'                                             # Optional. The file path to write results to.
+        outputPath: 'reports/ps-rule-results.sarif'                                             # Optional. The file path to write results to.
         path: './'                                                   # Optional. The working directory PSRule is run from.
         prerelease: false                                          # Optional. Determine if a pre-release module version is installed.
         summary: true                                             # Optional. Determines if a job summary is written.
@@ -43,4 +43,4 @@ jobs:
       uses: github/codeql-action/upload-sarif@v2
       if: always()
       with:
-        sarif_file: './reports/ps-rule-results.sarif'
+        sarif_file: 'reports/ps-rule-results.sarif'
