--- a/.github/workflows/psrule.yaml
+++ b/.github/workflows/psrule.yaml
@@ -34,13 +34,10 @@ jobs:
         path: './'                                                   # Optional. The working directory PSRule is run from.
         prerelease: false                                          # Optional. Determine if a pre-release module version is installed.
         summary: true                                             # Optional. Determines if a job summary is written.
-
-    - run: |
-        ls -al ./
-      if: always()
       
     - name: Upload results to security tab
       uses: github/codeql-action/upload-sarif@v2
       if: always()
       with:
         sarif_file: 'reports/ps-rule-results.sarif'
+        category: 'PSRule'
